exports[`test Correct drawing of ProductCardGrid 1`] = `
<div
  className="container">
  <div
    id="product-family-accordion"
    role="tablist">
    <div
      className="card">
      <a
        className=""
        data-parent="#product-family-accordion"
        data-toggle="collapse"
        href="#collapse-product-family-0">
        <div
          className="card-header"
          id="product-family-header-0"
          role="tab">
          <h5
            className="mb-0">
            Testproductfamily
          </h5>
        </div>
      </a>
      <div
        className="collapse show"
        id="collapse-product-family-0"
        role="tabpanel">
        <div
          className="card-block">
          <div
            className="row">
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/0"
                title="Details for Testproduct 5000 14E-17B">
                <div
                  className="card ProductCard ProductCard_RUNNING">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_RUNNING">
                    Testproduct 5000 14E-17B
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      9830510416
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      52189
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-05-07
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      84
                    </li>
                  </ul>
                </div>
              </a>
            </div>
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/1"
                title="Details for Testproduct 5010 116-1EB">
                <div
                  className="card ProductCard ProductCard_WARNING">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_WARNING">
                    Testproduct 5010 116-1EB
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      7716013254
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      90621
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-04-06
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      741
                    </li>
                  </ul>
                </div>
              </a>
            </div>
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/2"
                title="Details for Testproduct 3010 226-1XC">
                <div
                  className="card ProductCard ProductCard_WARNING">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_WARNING">
                    Testproduct 3010 226-1XC
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      7710473416
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      746
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-01-01
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      362
                    </li>
                  </ul>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="card">
      <a
        className="collapsed"
        data-parent="#product-family-accordion"
        data-toggle="collapse"
        href="#collapse-product-family-1">
        <div
          className="card-header"
          id="product-family-header-1"
          role="tab">
          <h5
            className="mb-0">
            TestproductfamilyNeo
          </h5>
        </div>
      </a>
      <div
        className="collapse"
        id="collapse-product-family-1"
        role="tabpanel">
        <div
          className="card-block">
          <div
            className="row">
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/5"
                title="Details for Testproduct 7000 27E-11C">
                <div
                  className="card ProductCard ProductCard_WARNING">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_WARNING">
                    Testproduct 7000 27E-11C
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      48958959
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      3475
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-02-06
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      13
                    </li>
                  </ul>
                </div>
              </a>
            </div>
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/6"
                title="Details for Testproduct 5010 115">
                <div
                  className="card ProductCard ProductCard_RUNNING">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_RUNNING">
                    Testproduct 5010 115
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      7716013254
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      90621
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-04-06
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      741
                    </li>
                  </ul>
                </div>
              </a>
            </div>
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/7"
                title="Details for Testproduct 012 226-1FC">
                <div
                  className="card ProductCard ProductCard_ERROR">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_ERROR">
                    Testproduct 012 226-1FC
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      7710473416
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      746
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-02-01
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      362
                    </li>
                  </ul>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Correct drawing of ProductCardGrid in case of excluded state 1`] = `
<div
  className="container">
  <div
    id="product-family-accordion"
    role="tablist">
    <div
      className="card">
      <a
        className=""
        data-parent="#product-family-accordion"
        data-toggle="collapse"
        href="#collapse-product-family-0">
        <div
          className="card-header"
          id="product-family-header-0"
          role="tab">
          <h5
            className="mb-0">
            Testproductfamily
          </h5>
        </div>
      </a>
      <div
        className="collapse show"
        id="collapse-product-family-0"
        role="tabpanel">
        <div
          className="card-block">
          <div
            className="row">
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/0"
                title="Details for Testproduct 5000 14E-17B">
                <div
                  className="card ProductCard ProductCard_RUNNING">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_RUNNING">
                    Testproduct 5000 14E-17B
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      9830510416
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      52189
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-05-07
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      84
                    </li>
                  </ul>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="card">
      <a
        className="collapsed"
        data-parent="#product-family-accordion"
        data-toggle="collapse"
        href="#collapse-product-family-1">
        <div
          className="card-header"
          id="product-family-header-1"
          role="tab">
          <h5
            className="mb-0">
            TestproductfamilyNeo
          </h5>
        </div>
      </a>
      <div
        className="collapse"
        id="collapse-product-family-1"
        role="tabpanel">
        <div
          className="card-block">
          <div
            className="row">
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/6"
                title="Details for Testproduct 5010 115">
                <div
                  className="card ProductCard ProductCard_RUNNING">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_RUNNING">
                    Testproduct 5010 115
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      7716013254
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      90621
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-04-06
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      741
                    </li>
                  </ul>
                </div>
              </a>
            </div>
            <div
              className="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-uhd-2">
              <a
                href="/#/product/7"
                title="Details for Testproduct 012 226-1FC">
                <div
                  className="card ProductCard ProductCard_ERROR">
                  <h4
                    className="card-title ProductCardTitle ProductCardTitle_ERROR">
                    Testproduct 012 226-1FC
                  </h4>
                  <ul>
                    <li
                      className="ProductCardInformationLine PCIL_serialNumber">
                      7710473416
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_quantity">
                      746
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_date">
                      2016-02-01
                    </li>
                    <li
                      className="ProductCardInformationLine PCIL_errorQuantity">
                      362
                    </li>
                  </ul>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
